Bug 1158557 - Don't throttle rAF for documents with live static clones. r=smaug